<resources>
    <string name="app_name">Ilias_Jayed</string>
    <string name="btn1">Ajouter une societe</string>
    <string name="btn2">Editer une societe</string>
    <string name="btn3">Liste de tous les societe</string>
    <string name="hnt1">Tapez le nom la societer</string>
    <string name="hnt2">Tapez le secteur de activiter</string>
    <string name="hnt3">Tapez le nombre de employer</string>
    <string name="btnajouter">ENREGISTRER</string>
    <string name="btnannuler">ANNULER</string>
    <string name="btnmodifier">MODIFIER</string>
    <string name="btnsupprimer">SUPPRIMER</string>
    <string name="ttr1">Ajouter Société</string>
    <string name="ttr2">Modifier Société</string>
    <string name="ttr3">Liste Société</string>
</resources>