<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".modifie">
    <TextView
        android:id="@+id/t1"
        style="@style/titre"
        android:text="@string/ttr2"></TextView>
    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/t1"
        android:id="@+id/spnr">

    </Spinner>
    <EditText
        android:id="@+id/txt1"
        style="@style/edittxt"
        android:layout_below="@+id/spnr"
        android:hint="@string/hnt1">

    </EditText>

    <EditText
        android:id="@+id/txt2"
        style="@style/edittxt"
        android:layout_below="@+id/txt1"
        android:hint="@string/hnt2">

    </EditText>

    <EditText
        style="@style/edittxt"
        android:layout_below="@+id/txt2"
        android:id="@+id/txt3"
        android:hint="@string/hnt3">

    </EditText>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt3">
        <Button
            style="@style/btn"
            android:layout_weight="1"
            android:text="@string/btnmodifier"
            android:onClick="modifier">
        </Button>
        <Button
            style="@style/btn"
            android:layout_weight="1"
            android:text="@string/btnsupprimer"
            android:onClick="supprimer">
        </Button>
    </LinearLayout>
</RelativeLayout>